[tool.poetry]
name = "kilombo"
version = "0.1.0"
description = ""
authors = ["Marta Arcones Rodríguez <marta.arcones@alumnos.upm.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.12"
requests = "^2.31.0"
xmltodict = "^0.13.0"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
pytest = "^7.4.2"
pysradb = "^2.2.0"
aiohttp = "^3.8.6"
aiodns = "^3.1.1"
aiohttp-retry = "^2.8.3"
backoff = "^2.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 180
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.git
    | \.idea
    | build
    | dist
  )/
)
'''
