[tool.poetry]
name = "kilombo"
version = "0.1.0"
description = ""
authors = ["Marta Arcones Rodríguez <marta.arcones@alumnos.upm.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.12"
requests = "^2.31.0"
fastapi = "^0.104.1"
uvicorn = "^0.23.2"
pytest = "^7.4.3"
pysradb = "^2.2.0"
aiohttp = "^3.9.0"
requests-mock = "^1.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 180
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.git
    | \.idea
    | build
    | dist
  )/
)
'''
